jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin        # < name of the deployment
  namespace: jellyfin   # < namespace where place the deployment and pods
  labels:
    app: jellyfin      # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
      - name: renderer
        hostPath:
          path: /dev/dri/renderD128    
      - name: card
        hostPath:
          path: /dev/dri/card0
      - name: jellyfin-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/jellyfin-config #
      - name: jellyfin-series
        hostPath:
          path: /mnt/series
      - name: jellyfin-movies
        hostPath:
          path: /mnt/movies 
      - name: jellyfin-dutchmovies
        hostPath:
          path: /mnt/nederlandse_films
      - name: jellyfin-transcode
        hostPath: 
          path: /dev/shm/jellyfin

      containers:
      - image: lscr.io/linuxserver/jellyfin:latest # < the name of the docker image we will use
        name: jellyfin                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "568" # < group "user"
        - name: PUID
          value: "568" # < user "docker"
        - name: TZ
          value: Europe/Brussels

        ports:                              # < the ports required (see container documentation)
         - containerPort: 8096
           name: webinterface
           protocol: TCP
         - containerPort: 1900
           name: dlna-udp
           protocol: UDP
         - containerPort: 7359
           name: discovery-udp
           protocol: UDP  
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: jellyfin-config               # < volumelabel configured earlier in the yaml file
           subPath: config                  # < subfolder in the nfs share to be mounted
         - mountPath: /media/series
           name: jellyfin-series
         - mountPath: /media/movies
           name: jellyfin-movies
         - mountPath: /media/dutch-movies
           name: jellyfin-dutchmovies
         - mountPath: /transcode
           name: jellyfin-transcode
         - mountPath: /dev/dri/card0
           name: card
         - mountPath: /dev/dri/renderD128
           name: renderer
        securityContext:
          privileged: true
