jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service    # < name of the service
  namespace: jellyfin # < namespace where place the deployment and pods
spec:
  selector:
    app: jellyfin # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 8096
