jellyfin/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
  annotations: 
    kubernetes.io/ingress.class: traefik-external
        traefik.ingress.kubernetes.io/websocket-timeout: "8h"
    traefik.ingress.kubernetes.io/client-body-timeout: "8h"
    traefik.ingress.kubernetes.io/client-header-timeout: "8h"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`movies.mangelschots.org`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
          scheme: http
          responseForwarding:
            flushInterval: 100ms
      middlewares:
        - name: jellyfin-websocket
  tls:
    secretName: movies-mangelschots-org-tls
